# HPXLoco

legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: base_task.py  legged_robot_config.py
legged_gym/legged_gym/envs/pai/: pai.py  (+1 more)
legged_gym/legged_gym/scripts/: play.py  train.py
legged_gym/legged_gym/utils/: helpers.py  task_registry.py
livelybot_GYM_control/07211080ball/: 1080_balls_of_solitude.py
livelybot_GYM_control/0721asset_info/: asset_info.py
livelybot_GYM_control/0722ik_osc/: franka_cube_ik_osc.py  mat_function.py  pai_ik_osc.py  pi_ik_osc.py  pinocchio_test.py
livelybot_rl_control/: setup.py
livelybot_rl_control/humanoid/scripts/: net_visual.py  play.py  sim2sim.py  train.py
livelybot_rl_control/humanoid/utils/: helpers.py  task_registry.py
rsl_rl/rsl_rl/algorithms/: him_ppo.py
rsl_rl/rsl_rl/modules/: him_actor_critic.py  him_estimator.py
rsl_rl/rsl_rl/runners/: him_on_policy_runner.py  on_policy_runner.py
src/pai_12dof/: package.xml
src/pai_12dof/launch/: display.launch  display_pi12dof.launch  gazebo.launch
src/pai_12dof/urdf/: hunter.urdf  pai_12dof.urdf
src/sim2real/: CMakeLists.txt  config.yaml  package.xml
src/sim2real/include/: sim2real.h
src/sim2real/launch/: sim2real.launch
src/sim2real/policy/: 2024_0716_HIM_1_policy.pt  2024_0716_HIM_2_policy.pt  2024_0717_HIM_6100_him_policy.pt  policy_1_height_0.03.pt
src/sim2real/src/: .goutputstream-G24DQ2  sim2real.cpp  try.py
src/sim2real_msg/: CMakeLists.txt
src/sim2real_msg/msg/: PosState.msg  PosUrdfState.msg  Target.msg  TargetUrdf.msg
(+21 files in other folders)
